--- a/subcategoria.html
+++ b/subcategoria.html
@@ -46,20 +46,20 @@
                     <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
                     <ul class="sub-menu dropdown">
                       <li id="menu-item-1316" ng-repeat="item in subcategorias">
-                          <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+                        <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
                       </li>
                     </ul>
                   </li>
                 </ul>
               </li>
               <li id="menu-item-1295" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">PAGINAS</a>
+                <a class="has-icon">PÁGINAS</a>
                 <ul class="sub-menu dropdown">
                   <li id="menu-item-1309">
                     <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
                   </li>
                   <li id="menu-item-1308">
-                    <a href="contact.html" class="has-icon">CONTATOS</a>
+                    <a href="contact.html" class="has-icon">CONTATO</a>
                   </li>
                 </ul>
               </li>
@@ -78,10 +78,10 @@
 
     <!-- Start Title Bar -->
 
-    <section class="wd-title-bar">
+    <section class="banner-category" style="background: url('http://webliniaerp.com.br/assets/imagens/produtos/{{ categoria_pai.pth_banner }}') no-repeat center center;">
       <div class="row">
         <div class="large-12 columns p-t-70 text-left title-banner">
-          <h2 id="page-title" class="title">{{ titulo }}</h2>
+          <h2 id="page-title" class="title">{{ categoria_pai.descricao_categoria }}</h2>
         </div>
       </div>
     </section>
@@ -103,11 +103,9 @@
           <div class="wd-section-project">
             <ul class="wd-section-portfolio small-block-grid-1 medium-block-grid-2 large-block-grid-3">
               <li ng-repeat="item in itens">
-                <div class="image-wrapper overlay-slide-in-left">
-                  <img width="760" height="500" src="http://via.placeholder.com/760x500" class="attachment-flooring_portfolio_760x500 size-flooring_portfolio_760x500 wp-post-image" alt="">
-                  <div class="image-overlay-content">
-                    <a href="produtos.html?subcategoria={{ item.id }}"><h2>{{ item.descricao_categoria }}</h2></a>
-                  </div>
+                <div class="wd-project hvr-underline-from-center">
+                  <img width="380" height="254" src="http://webliniaerp.com.br/assets/imagens/produtos/{{ item.pth_thumbnail }}" class="attachment-flooring_portfolio size-flooring_portfolio wp-post-image" alt="">
+                  <a href="produtos.html?subcategoria={{ item.id }}"><h4>{{ item.descricao_categoria }}</h4></a><br>
                 </div>
               </li>
             </ul>
