--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br" ng-app="alfasuportel">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,239 +14,144 @@
     <link rel="stylesheet" href="stylesheets/app.css">
     <link rel="stylesheet" href="stylesheets/custom-style.css">
     <link rel="stylesheet" href="stylesheets/header.css">
-    <link rel="stylesheet" href="stylesheets/sections.css">
     <link rel="icon" href="images/logo/logo alfa suportel .png" width="140" height="140">
+    <script src="bower_components/angular/angular.js"></script>
+
   </head>
-  <body>
+<body ng-controller="itemProdutoController">
 
-    <!-- Start Header -->
+  <!-- Start Header -->
 
-    <header class="l-header creative-layout">
-      <div class="top-bar-container contain-to-grid sticky">
-        <nav class="top-bar" data-topbar="">
-          <ul class="title-area">
-            <li class="name">
-              <h1>
-                <a title="Flooring Company WordPress Theme" rel="home" href="index.html">
-                  <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
-                </a>
-              </h1>
-            </li>
-            <li class="toggle-topbar menu-icon">
-              <a href="#"><span>Menu</span></a>
-            </li>
-          </ul>
-        <section class="creative top-bar-section right">
-    <div class="menu-main-menu-container">  
-      <ul id="menu-main-menu" class="menu">
-        <li id="menu-item-1299" class="has-dropdown not-click">
-            <a href="#" class="has-icon">PRODUTOS</a>
-            <ul class="sub-menu dropdown">
-              <li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Catalogo</a></li>
-              <li id="menu-item-1300" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">CHURRASQUEIRAS</a>
-                <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="#">Estilo I</a></li>
-                  <li id="menu-item-1316">
-                    <a href="item_produto.html" class="has-icon">ASPECT II</a>
-                  </li>
-                  <li id="menu-item-1316">
-                    <a href="item_produto.html" class="has-icon">ASPECT III</a>
-                  </li>
-                  <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">BRASIL570</a>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">CARVÃO A BAFO PÉ ALTO</a>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">ESPETINHO</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">ELETRICA</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">A BAFO PE BAIXO</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">INOX VERTIVAL</a>
-                  </li>
-                  </li>
-                   <li id="menu-item-1315">
-                    <a href="item_produto.html" class="has-icon">GAUCHINHA</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1301" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">GRELHAS</a>
-                <ul class="sub-menu dropdown">
-                  <li class="title back js-generated">
-                    <h5>
-                      <a href="javascript:void(0)">Back</a>
-                    </h5>
-                  </li>
-                  <li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">Estilo II</a></li>
-                  <li id="menu-item-1319">
-                    <a href="item_produto.html" class="" ass="has-icon">INOX</a>
-                  </li>
-                  <li id="menu-item-1320">
-                    <a href="item_produto.html" class="has-icon">REDONDO</a>
-                  </li>
-                  <li id="menu-item-1321">
-                    <a href="item_produto.html" class="has-icon">RETANGULAR</a>
-                  </li>
-                  <li id="menu-item-1321">
-                    <a href="item_produto.html" class="has-icon">ESMALTADO</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">ESPETO</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">FRIGIDEIRA A GAS</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">CHAPEIRA</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">GRILLS</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-              <li id="menu-item-1302" class="has-dropdown not-click">
-                <a href="catalogo.html" class="has-icon">FOGÕES</a>
-                <ul class="sub-menu dropdown "><li class="title back js-generated"><h5><a href="javascript:void(0)">Back</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html"> Catalogo unico</a></li>
-                  <li id="menu-item-1303">
-                    <a href="item_produto.html" class="has-icon">Catalogo unico</a>
-                  </li>
-                </ul>
-              </li>
-            </ul>
+  <header class="l-header creative-layout">
+    <div class="top-bar-container contain-to-grid sticky">
+      <nav class="top-bar" data-topbar="">
+        <ul class="title-area">
+          <li class="name">
+            <h1>
+              <a title="alfasuportel" rel="home" href="index.html" pa>
+                <img alt="logo" width="auto" height="auto" src="images/logo/logo alfa suportel .png">
+              </a>
+            </h1>
           </li>
-        <li id="menu-item-1295" class="has-dropdown not-click">
-          <a href="catalogo.html" class="has-icon">PAGINAS</a>
-          <ul class="sub-menu dropdown"><li class="title back js-generated"><h5><a href="javascript:void(0)">Voltar</a></h5></li><li class="parent-link hide-for-medium-up"><a class="parent-link js-generated" href="catalogo.html">PAGINAS</a></li>
-            <li id="menu-item-1309">
-              <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
-            </li>
-            <li id="menu-item-1308">
-              <a href="contact.html" class="has-icon">CONTATOS</a>
-            </li>
-          </ul>
-          
-        </li>
-        <li id="menu-item-1308">
-          <a href="contact.html" class="has-icon">CONTATOS</a>
-        </li>
-        <li id="menu-item-1308">
-          <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
-        </li>              
-      </ul>
+          <li class="toggle-topbar menu-icon">
+            <a href="#"><span>Menu</span></a>
+          </li>
+        </ul>
+        <section class="creative top-bar-section right">
+          <div class="menu-main-menu-container">  
+            <ul id="menu-main-menu" class="menu">
+              <li id="menu-item-1299" class="has-dropdown not-click">
+                <a href="categorias.html" class="has-icon">LINHA DE PRODUTOS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1300" class="has-dropdown not-click" ng-repeat="item in categorias">
+                    <a href="subcategoria.html?categoria={{ item.id }}" ng-mouseover="loadSubCategorias(item)" class="has-icon">{{ item.descricao_categoria }}</a>
+                    <ul class="sub-menu dropdown">
+                      <li id="menu-item-1316" ng-repeat="item in subcategorias">
+                        <a href="produtos.html?subcategoria={{ item.id }}" class="has-icon">{{ item.descricao_categoria }}</a>
+                      </li>
+                    </ul>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1295" class="has-dropdown not-click">
+                <a href="catalogo.html" class="has-icon">PAGINAS</a>
+                <ul class="sub-menu dropdown">
+                  <li id="menu-item-1309">
+                    <a href="about-us.html" class="has-icon">QUEM SOMOS</a>
+                  </li>
+                  <li id="menu-item-1308">
+                    <a href="contact.html" class="has-icon">CONTATOS</a>
+                  </li>
+                </ul>
+              </li>
+              <li id="menu-item-1308">
+                <a href="contact.html" class="has-icon">TRABALHE CONOSCO</a>
+              </li>              
+            </ul>
+          </div>
+        </section>
+      </nav>
+    </div>
+  </header>
+
+  <!-- End Header -->
+
+  <!-- Start Title Bar -->
+
+  <section class="wd-title-bar">
+    <div class="row">
+      <div class="large-12 columns p-t-70 text-left">
+        <h2 id="page-title" class="title">Contato</h2>
+      </div>
     </div>
   </section>
-        </nav>
-      </div>
-    </header>
 
-    <!-- End Header -->
+  <!-- End Title Bar -->
 
-    <!-- Start Title Bar -->
+  <!-- Start Contact -->
 
-    <section class="wd-title-bar">
-      <div class="row">
-        <div class="large-12 columns p-t-70 text-left">
-          <h2 id="page-title" class="title">Contato</h2>
+  <section class="contact-us-wrapper">
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <div class="wd-title-section_l">
+          <h2>Entrar em contato</h2>
+          <h5>Envie seu e mail e deixe sua necessidade que logo entraremos em contato</h5>
         </div>
-      </div>
-    </section>
-
-    <!-- End Title Bar -->
-
-    <!-- Start Contact -->
-
-    <section class="contact-us-wrapper">
-      <div class="row">
-        <div class="small-12 large-12 columns">
-          <div class="wd-title-section_l">
-            <h2>Entrar em contato</h2>
-            <h5>Envie seu e mail e deixe sua necessidade que logo entraremos em contato</h5>
-          </div>
-        </div>
-      </div>
-      <div class="row">
-        <div class="small-12 large-12 columns">
-          <div class="row full-width">
-            <div role="form" class="wpcf7">
-              <form action="#" method="post" class="wpcf7-form" novalidate="novalidate">
-                <div class="small-12 large-4 columns">
-                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Nome"></span>
-                </div>
-                <div class="small-12 large-4 columns">
-                  <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="E-mail"></span>
-                </div>
-                <div class="small-12 large-4 columns">
-                  <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Empresa"></span>
-                </div>
-                <div class="small-12 large-12 columns">
-                  <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Deixe sua mensagem"></textarea></span>
-                </div>
-                <div class="small-12 large-12 columns text-center">
-                  <input type="submit" value="ENVIAR" class="wpcf7-form-control wpcf7-submit button small"><span class="ajax-loader"></span>
-                </div>
-              </form>
-            </div>
-          </div>
-        </div>
-      </div>
-    </section>
-    <section class="wd-section-call-to-action">
-      <div class="row call-to-action">
-        <div class="small-12 large-8 columns">
-          <h4>NOSSAS EXPERIÊNCIAS</h4>
-          <p>Desde o início, sempre tentamos fazer as coisas corretamente. Por isso, é caloroso obter reconhecimento de pessoas que sentem o mesmo</p>
-        </div>
-        <div class="small-12 large-4 columns">
-          <div class="wd-call-to-action-btn">
-            <a href="#">Veja Mais</a>
-          </div>
-        </div>
-      </div>
-    </section>
-
-    <!-- End Contact -->
-
-    <!-- Start Map its not work well-->
-
-    <div class="wd-section-map">
-      <div class="map">
-        <div id="map-canvas" data-decription="06-Mar-2018" data-companyname="Alfasuportel" data-zoom="11" data-longitude="-23.530481" data-latitude="-46.413095"></div>
       </div>
     </div>
+    <div class="row">
+      <div class="small-12 large-12 columns">
+        <div class="row full-width">
+          <div role="form" class="wpcf7">
+            <form action="#" method="post" class="wpcf7-form" novalidate="novalidate">
+              <div class="small-12 large-4 columns">
+                <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Nome"></span>
+              </div>
+              <div class="small-12 large-4 columns">
+                <span class="wpcf7-form-control-wrap your-email"><input type="email" name="your-email" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-email wpcf7-validates-as-required wpcf7-validates-as-email" aria-required="true" aria-invalid="false" placeholder="E-mail"></span>
+              </div>
+              <div class="small-12 large-4 columns">
+                <span class="wpcf7-form-control-wrap your-name"><input type="text" name="your-name" value="" size="40" class="wpcf7-form-control wpcf7-text wpcf7-validates-as-required" aria-required="true" aria-invalid="false" placeholder="Empresa"></span>
+              </div>
+              <div class="small-12 large-12 columns">
+                <span class="wpcf7-form-control-wrap your-message"><textarea name="your-message" cols="40" rows="10" class="wpcf7-form-control wpcf7-textarea" aria-invalid="false" placeholder="Deixe sua mensagem"></textarea></span>
+              </div>
+              <div class="small-12 large-12 columns text-center">
+                <input type="submit" value="ENVIAR" class="wpcf7-form-control wpcf7-submit button small"><span class="ajax-loader"></span>
+              </div>
+            </form>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <section class="wd-section-call-to-action">
+    <div class="row call-to-action">
+      <div class="small-12 large-8 columns">
+        <h4>NOSSAS EXPERIÊNCIAS</h4>
+        <p>Desde o início, sempre tentamos fazer as coisas corretamente. Por isso, é caloroso obter reconhecimento de pessoas que sentem o mesmo</p>
+      </div>
+      <div class="small-12 large-4 columns">
+        <div class="wd-call-to-action-btn">
+          <a href="#">Veja Mais</a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-    <!-- End Map -->
+  <!-- End Contact -->
 
-    <!-- Start Footer -->
+  <!-- Start Map its not work well-->
+
+  <div class="wd-section-map">
+    <div class="map">
+      <div id="map-canvas" data-decription="06-Mar-2018" data-companyname="Alfasuportel" data-zoom="11" data-longitude="-23.530481" data-latitude="-46.413095"></div>
+    </div>
+  </div>
+
+  <!-- End Map -->
+
+  <!-- Start Footer -->
 
   <section class="wd-footer">
     <div class="row animation-parent" data-animation-delay="180">
@@ -327,13 +232,13 @@
     </footer>
   </section>
 
-    <!-- End Footer -->
+  <!-- End Footer -->
 
-    <script src="js/jquery-1.12.3.min.js"></script>
-    <script src="js/plugins.js"></script>
-    <script src="js/shortcode/script-shortcodes.js"></script>
-    <script src="https://maps.googleapis.com/maps/api/js"></script>
-    <script src="js/wd_owlcarousel.js"></script>
-    <script src="js/scripts.js"></script>
-  </body>
+  <script src="js/jquery-1.12.3.min.js"></script>
+  <script src="js/plugins.js"></script>
+  <script src="js/shortcode/script-shortcodes.js"></script>
+  <script src="https://maps.googleapis.com/maps/api/js"></script>
+  <script src="js/wd_owlcarousel.js"></script>
+  <script src="js/scripts.js"></script>
+</body>
 </html>
